tests/fixtures/invalid/min_str_bool.py
# Cannot call min() with Str, Bool
x = min("hello", True)
